--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,20 +1,29 @@
 section header {
   
-  border-top: 1px var(--stroke-color);
+  border-top: 1px solid var(--stroke-color);
   padding-block: 12px 24px;
   font: var(--text-span);
 
      
 }
 
+
+
 #featured {
+  grid-area: featured;
+
   img{
     height: 100%;
     object-fit: cover; /*evita que a iamgem estique*/
   }
 
 
-.card {
+  #week {
+    grid-area: week;
+  }
+
+
+  .card {
   border-radius: 4px;
   position: relative;
   overflow: hidden;  /*esconde o transbordamento da caixa*/
@@ -60,7 +69,9 @@ section header {
 
   #week {
 
-    margin-top: 80px;
+    grid-area: week;
+
+    margin-top: 40px;
 
  
      header a {
@@ -70,39 +81,37 @@ section header {
       gap: 8px;
    
 
-    span {
-    background-image: url('../assets/icons/Vector.svg');
-
+      span {
+      background-image: url('../assets/icons/Vector.svg'); /* necessário Sempre que for usar background-image em um span, a, div ou qualquer outro elemento sem conteúdo */
+      
     
-    
-    /* necessário Sempre que for usar background-image em um span, a, div ou qualquer outro elemento sem conteúdo */
-    display: inline-block; 
-    width: 16px;
-    height: 16px;
+      display: inline-block; 
+      width: 16px;
+      height: 16px;
    
     }
 
-    &:hover span {
+      &:hover span {
       background-image: url('../assets/icons/ArrowRight-hover.svg');
 
+      }
+
+    }
+  
+    /*&>div - aplicando ao primeiro nível de div dentro do #week
+    292px: largura das imagens. poderia ser 1fr mas para ficar mais ajustado, determina-se o valor da largura*/
+  
+    &>div {
+    grid-template-columns: repeat(4, 292px);
     }
 
-  }
-  
-  /*&>div - aplicando ao primeiro nível de div dentro do #week
-  292px: largura das imagens. poderia ser 1fr mas para ficar mais ajustado, determina-se o valor da largura*/
-  
-  &>div {
-    grid-template-columns: repeat(4, 292px);
-  }
-
  
-  img {
-    height: 160;
-     border-radius: 4px;
-  }
+    img {
+      height: 160;
+      border-radius: 4px;
+    }
 
-  figure {
+    figure {
     position: relative;
 
     .content-tag {
@@ -116,8 +125,98 @@ section header {
       font-weight: 800;
       margin-top: 8px;
     }
+    }
+}
+
+#ai {
+
+
+  grid-area: ai;
+  
+  
+  header a {
+    justify-self: end;
+    align-items: center;
+    gap: 8px;
+    
+    span {
+      background-image: url('../assets/icons/Vector.svg');
+      display: inline-block; 
+      width: 16px;
+      height: 16px;
+    }
+    
+    &:hover span {
+      background-image: url('../assets/icons/ArrowRight-hover.svg');
+    }
+  }
+
+
+
+  
+  img {
+    width: 176px;
+    aspect-ratio: 1/1; /*utilize essa propriedade se quiser uma imagem quadrada*/
+    object-fit: cover;
+  }
+
+  h3 {
+
+    margin-block: 8px 4px; /*8px em cima e 4 embaixo*/
+
+  }
+
+    
+   
+}
+
+aside {
+  grid-area: aside;
+
+  article img {
+
   }
 }
+
+#more {
+
+  margin-top: 32px;
+
+  h3 {
+    margin-top: 8px;
+  }
+
+  img {
+    width: 72px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+  header a {
+    justify-self: end;
+    align-items: center;
+    gap: 8px;
+    
+    span {
+      background-image: url('../assets/icons/Vector.svg');
+      display: inline-block; 
+      width: 16px;
+      height: 16px;
+    }
+    
+    &:hover span {
+      background-image: url('../assets/icons/ArrowRight-hover.svg');
+    }
+  }
+
+  /*espaçamento entre as imagens da seção article*/
+  article {
+    gap: 32px;
+  }
+  
+}
+
+
 
 
 
